--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: [Welcome to My Data Portfolio]
+description: [Explore my portfolio and lets share some ideas! ;)]
